--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 				<div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-6 gap-4">
 					<div
 						class="bg-transparent text-[#10B981] px-2 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold w-full sm:w-auto text-center">
-						✨ Religious Studies
+						Religious Studies
 					</div>
 					<button
 						class="bg-white border-2 border-primary text-primary px-4 sm:px-6 py-2 rounded-full font-semibold hover:bg-primary hover:text-white transition duration-300 w-full sm:w-auto text-center">
@@ -278,8 +278,8 @@
 			<div class="mb-12">
 				<div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-6 gap-4">
 					<div
-						class="bg-gradient-to-r from-blue-500 to-purple-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold shadow-lg w-full sm:w-auto text-center">
-						🌍 Modern Languages
+						class="bg-transparent text-[#10B981] px-2 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold w-full sm:w-auto text-center">
+						Languages
 					</div>
 					<button
 						class="bg-white border-2 border-blue-500 text-blue-500 px-4 sm:px-6 py-2 rounded-full font-semibold hover:bg-blue-500 hover:text-white transition duration-300 w-full sm:w-auto text-center">
@@ -353,8 +353,8 @@
 			<div class="mb-12">
 				<div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-6 gap-4">
 					<div
-						class="bg-gradient-to-r from-gray-800 to-indigo-600 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold shadow-lg w-full sm:w-auto text-center">
-						💻 Technology & Programming
+						class="bg-transparent text-[#10B981] px-2 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold w-full sm:w-auto text-center">
+						Religious Studies
 					</div>
 					<button
 						class="bg-white border-2 border-gray-800 text-gray-800 px-4 sm:px-6 py-2 rounded-full font-semibold hover:bg-gray-800 hover:text-white transition duration-300 w-full sm:w-auto text-center">
@@ -422,95 +422,14 @@
 				</div>
 			</div>
 
-			<!-- Sciences -->
-			<div class="mb-12">
-				<div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-6 gap-4">
-					<div
-						class="bg-gradient-to-r from-orange-500 to-red-500 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold shadow-lg w-full sm:w-auto text-center">
-						🔬 Sciences & Academic Subjects
-					</div>
-					<button
-						class="bg-white border-2 border-orange-500 text-orange-500 px-4 sm:px-6 py-2 rounded-full font-semibold hover:bg-orange-500 hover:text-white transition duration-300 w-full sm:w-auto text-center">
-						View More →
-					</button>
-				</div>
-				<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-					<div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
-						<div class="bg-orange-500 h-24 flex items-center justify-center">
-							<div class="text-white text-center">
-								<div class="text-xl font-bold">Mathematics</div>
-							</div>
-						</div>
-						<div class="p-4">
-							<h3 class="text-lg font-semibold mb-2">Advanced Mathematics</h3>
-							<p class="text-gray-600 text-sm mb-4">Calculus, Algebra, Geometry</p>
-							<div class="flex items-center justify-between">
-								<span class="text-xl font-bold text-primary">$69</span>
-								<button
-									class="bg-primary text-white px-3 py-1 rounded text-sm hover:bg-secondary transition duration-300">Enroll</button>
-							</div>
-						</div>
-					</div>
 
-					<div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
-						<div class="bg-blue-600 h-24 flex items-center justify-center">
-							<div class="text-white text-center">
-								<div class="text-xl font-bold">Physics</div>
-							</div>
-						</div>
-						<div class="p-4">
-							<h3 class="text-lg font-semibold mb-2">Physics Fundamentals</h3>
-							<p class="text-gray-600 text-sm mb-4">Mechanics, Thermodynamics</p>
-							<div class="flex items-center justify-between">
-								<span class="text-xl font-bold text-primary">$79</span>
-								<button
-									class="bg-primary text-white px-3 py-1 rounded text-sm hover:bg-secondary transition duration-300">Enroll</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
-						<div class="bg-green-600 h-24 flex items-center justify-center">
-							<div class="text-white text-center">
-								<div class="text-xl font-bold">Biology</div>
-							</div>
-						</div>
-						<div class="p-4">
-							<h3 class="text-lg font-semibold mb-2">General Biology</h3>
-							<p class="text-gray-600 text-sm mb-4">Cell Biology, Genetics</p>
-							<div class="flex items-center justify-between">
-								<span class="text-xl font-bold text-primary">$74</span>
-								<button
-									class="bg-primary text-white px-3 py-1 rounded text-sm hover:bg-secondary transition duration-300">Enroll</button>
-							</div>
-						</div>
-					</div>
-
-					<div class="bg-white rounded-xl shadow-lg overflow-hidden card-hover">
-						<div class="bg-purple-600 h-24 flex items-center justify-center">
-							<div class="text-white text-center">
-								<div class="text-xl font-bold">Chemistry</div>
-							</div>
-						</div>
-						<div class="p-4">
-							<h3 class="text-lg font-semibold mb-2">Organic Chemistry</h3>
-							<p class="text-gray-600 text-sm mb-4">Reactions, Mechanisms</p>
-							<div class="flex items-center justify-between">
-								<span class="text-xl font-bold text-primary">$84</span>
-								<button
-									class="bg-primary text-white px-3 py-1 rounded text-sm hover:bg-secondary transition duration-300">Enroll</button>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 
 			<!-- Additional Subjects -->
 			<div class="mb-12">
 				<div class="flex flex-col sm:flex-row items-start sm:items-center justify-between mb-6 gap-4">
 					<div
-						class="bg-gradient-to-r from-teal-500 to-green-500 text-white px-6 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold shadow-lg w-full sm:w-auto text-center">
-						🌎 Geography, History & Economics
+						class="bg-transparent text-[#10B981] px-2 sm:px-8 py-3 sm:py-4 rounded-full text-lg sm:text-xl font-bold w-full sm:w-auto text-center">
+						Religious Studies
 					</div>
 					<button
 						class="bg-white border-2 border-teal-500 text-teal-500 px-4 sm:px-6 py-2 rounded-full font-semibold hover:bg-teal-500 hover:text-white transition duration-300 w-full sm:w-auto text-center">
