--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@ ${message || 'No additional message'}
 📱 Please contact this student via Telegram to complete the enrollment process.`;
 
 			const encodedMessage = encodeURIComponent(telegramMessage);
-			const telegramBotURL = `https://t.me/AcademyBot?start=${encodedMessage}`;
+			const telegramBotURL = `https://t.me/KomildevBot?start=${encodedMessage}`;
 
 			// Show success message
 			alert('✅ Your request has been submitted successfully!\n\nYou will be redirected to our Telegram bot where our team will contact you within 24 hours to complete your course enrollment.');
