--- a/index.html
+++ b/index.html
@@ -943,9 +943,9 @@
 					</p>
 				</div>
 
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-blue-50 to-blue-100 card-hover">
+				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-blue-500 to-blue-600 w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
+						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
 						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
@@ -957,9 +957,9 @@
 					</p>
 				</div>
 
-				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-purple-50 to-purple-100 card-hover">
+				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-primary/5 to-secondary/5 card-hover">
 					<div
-						class="bg-gradient-to-br from-purple-500 to-purple-600 w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
+						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
 						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
@@ -973,7 +973,7 @@
 
 				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-green-50 to-green-100 card-hover">
 					<div
-						class="bg-gradient-to-br from-green-500 to-green-600 w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
+						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
 						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z" />
@@ -987,7 +987,7 @@
 
 				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-yellow-50 to-yellow-100 card-hover">
 					<div
-						class="bg-gradient-to-br from-yellow-500 to-yellow-600 w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
+						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
 						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M20 6h-2.18c.11-.31.18-.65.18-1a2.996 2.996 0 0 0-5.5-1.65l-.5.67-.5-.68C10.96 2.54 10.05 2 9 2 7.34 2 6 3.34 6 5c0 .35.07.69.18 1H4c-1.11 0-1.99.89-1.99 2L2 19c0 1.11.89 2 2 2h16c1.11 0 2-.89 2-2V8c0-1.11-.89-2-2-2zm-5-2c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM9 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1z" />
@@ -1001,7 +1001,7 @@
 
 				<div class="text-center p-8 rounded-3xl bg-gradient-to-br from-red-50 to-red-100 card-hover">
 					<div
-						class="bg-gradient-to-br from-red-500 to-red-600 w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
+						class="bg-gradient-to-br from-primary to-secondary w-20 h-20 rounded-3xl flex items-center justify-center mx-auto mb-6 shadow-xl">
 						<svg class="w-10 h-10 text-white" fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
