--- a/index.html
+++ b/index.html
@@ -1431,7 +1431,7 @@
 				<!-- Contact Icons -->
 				<div class="flex justify-center space-x-6 mb-6">
 					<div class="flex items-center space-x-2 social-icon cursor-pointer">
-						<svg class="w-5 h-5 icon-location" fill="currentColor" viewBox="0 0 20 20">
+						<svg class="w-5 h-5 icon-location " fill="currentColor" viewBox="0 0 20 20">
 							<path fill-rule="evenodd"
 								d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 								clip-rule="evenodd" />
@@ -1456,7 +1456,7 @@
 					</div>
 
 					<div class="flex items-center space-x-2 social-icon cursor-pointer">
-						<svg class="w-5 h-5 icon-telegram" fill="currentColor" viewBox="0 0 24 24">
+						<svg class="w-5 h-5 icon-telegram " fill="currentColor" viewBox="0 0 24 24">
 							<path
 								d="M12 0C5.374 0 0 5.373 0 12s5.374 12 12 12 12-5.373 12-12S18.626 0 12 0zm5.568 8.16c-.169 1.858-.896 6.728-.896 6.728-.302 1.693-1.124 1.993-1.848 1.458-.723-.536-8.926-5.776-8.926-5.776s-1.048-.722-.048-1.458c1-1.458 8.926-5.776 8.926-5.776s1.523-.966 1.523 0-.727 4.824-.727 4.824z" />
 						</svg>
@@ -1465,37 +1465,15 @@
 				</div>
 
 				<!-- Social Media -->
-				<div class="flex justify-center space-x-4 mb-6">
-					<div
-						class="bg-gray-50 p-3 rounded-full hover:bg-emerald-500 hover:text-white transition duration-300 cursor-pointer social-icon">
-						<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-							<path
-								d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33zM9.75 15.02l5.75-3.27-5.75-3.27v6.54z" />
-						</svg>
-					</div>
-					<div
-						class="bg-gray-50 p-3 rounded-full hover:bg-emerald-500 hover:text-white transition duration-300 cursor-pointer social-icon">
-						<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-							<path
-								d="M22.46 6c-.77.35-1.6.58-2.46.69.88-.53 1.56-1.37 1.88-2.38-.83.5-1.75.85-2.72 1.05C18.37 4.5 17.26 4 16 4c-2.35 0-4.27 1.92-4.27 4.29 0 .34.04.67.11.98C8.28 9.09 5.11 7.38 3 4.79c-.37.63-.58 1.37-.58 2.15 0 1.49.75 2.81 1.91 3.56-.71 0-1.37-.2-1.95-.5v.03c0 2.08 1.48 3.82 3.44 4.21a4.22 4.22 0 0 1-1.93.07 4.28 4.28 0 0 0 4 2.98 8.521 8.521 0 0 1-5.33 1.84c-.34 0-.68-.02-1.02-.06C3.44 20.29 5.7 21 8.12 21 16 21 20.33 14.46 20.33 8.79c0-.19 0-.37-.01-.56.84-.6 1.56-1.36 2.14-2.23z" />
-						</svg>
-					</div>
-					<div
-						class="bg-gray-50 p-3 rounded-full hover:bg-emerald-500 hover:text-white transition duration-300 cursor-pointer social-icon">
-						<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
-							<path
-								d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
-						</svg>
-					</div>
+
+
+				<!-- Copyright -->
+				<div class="border-t border-gray-100 pt-6 text-center">
+					<p class="text-gray-500 text-sm">&copy; <span id="copyright-year">2025</span> MUHIB ACADEMY. All
+						rights
+						reserved.</p>
 				</div>
 			</div>
-
-			<!-- Copyright -->
-			<div class="border-t border-gray-100 pt-6 text-center">
-				<p class="text-gray-500 text-sm">&copy; <span id="copyright-year">2025</span> MUHIB ACADEMY. All rights
-					reserved.</p>
-			</div>
-		</div>
 	</footer>
 
 	<script>
