--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@
 				<h2 class="text-5xl lg:text-6xl font-bold text-[#059669] mb-6">
 					O'quvchilarimiz Fikri
 				</h2>
-
+				<div class="w-20 h-1 bg-[#059669] rounded-full mx-auto mb-6"></div>
 				<p class="text-xl text-gray-600 max-w-2xl mx-auto">
 					Muvaffaqiyatli o'quvchilarning fikr-mulohazalari
 				</p>
@@ -1708,6 +1708,16 @@
 				</div>
 			</div>
 
+			<!-- Call to Action -->
+			<div class="text-center">
+				<p class="text-xl text-gray-600 mb-8">
+					Siz ham muvaffaqiyat hikoyangizni yozing!
+				</p>
+				<button
+					class="bg-[#059669] hover:bg-[#059669]/90 text-white px-10 py-4 rounded-xl font-semibold text-lg transition-all duration-300">
+					Bepul konsultatsiya olish
+				</button>
+			</div>
 		</div>
 	</section>
 
