--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@
 </head>
 
 <body class="bg-lightGray font-uzbek">
-	<!-- Navigation -->
+
+
 	<nav class="bg-white/95 backdrop-blur-md shadow-xl sticky top-0 z-50 border-b border-primary/10">
 		<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 			<div class="flex justify-between items-center h-20">
@@ -251,28 +252,76 @@
 					</button>
 				</div>
 			</div>
+		</div>
 
-			<!-- Mobile Menu -->
-			<div id="mobile-menu" class="md:hidden hidden bg-white/95 backdrop-blur-md border-t border-primary/10">
-				<div class="px-4 pt-4 pb-6 space-y-2">
-					<a href="#bosh"
-						class="block px-4 py-3 rounded-xl text-gray-700 hover:text-primary hover:bg-primary/5 transition duration-300">Bosh
-						sahifa</a>
-					<a href="#kurslar"
-						class="block px-4 py-3 rounded-xl text-gray-700 hover:text-primary hover:bg-primary/5 transition duration-300">Kurslar</a>
-					<a href="#biz-haqimizda"
-						class="block px-4 py-3 rounded-xl text-gray-700 hover:text-primary hover:bg-primary/5 transition duration-300">Biz
-						haqimizda</a>
-					<a href="#aloqa"
-						class="block px-4 py-3 rounded-xl text-gray-700 hover:text-primary hover:bg-primary/5 transition duration-300">Aloqa</a>
-					<button onclick="scrollToForm()"
-						class="w-full mt-4 bg-gradient-to-r from-primary to-secondary text-white px-6 py-3 rounded-xl font-semibold">
-						Kurs sotib olish
-					</button>
-				</div>
+		<!-- Mobile Menu -->
+		<div id="mobile-menu"
+			class="md:hidden hidden bg-white/98 backdrop-blur-lg border-t border-primary/10 shadow-2xl">
+			<div class="px-4 pt-4 pb-6 space-y-3">
+				<a href="#bosh"
+					class="block text-gray-700 hover:text-primary px-4 py-3 rounded-xl font-medium transition duration-300 hover:bg-primary/5 border border-transparent hover:border-primary/20">
+					Bosh sahifa
+				</a>
+				<a href="#kurslar"
+					class="block text-gray-700 hover:text-primary px-4 py-3 rounded-xl font-medium transition duration-300 hover:bg-primary/5 border border-transparent hover:border-primary/20">
+					Kurslar
+				</a>
+				<a href="#biz-haqimizda"
+					class="block text-gray-700 hover:text-primary px-4 py-3 rounded-xl font-medium transition duration-300 hover:bg-primary/5 border border-transparent hover:border-primary/20">
+					Biz haqimizda
+				</a>
+				<a href="#aloqa"
+					class="block text-gray-700 hover:text-primary px-4 py-3 rounded-xl font-medium transition duration-300 hover:bg-primary/5 border border-transparent hover:border-primary/20">
+					Aloqa
+				</a>
+				<button onclick="scrollToForm()"
+					class="w-full bg-gradient-to-r from-primary to-secondary text-white px-6 py-4 rounded-xl font-semibold shadow-lg hover:shadow-xl transform hover:-translate-y-1 transition duration-300 mt-4">
+					Kurs sotib olish
+				</button>
 			</div>
 		</div>
 	</nav>
+
+	<style>
+		.text-primary {
+			color: var(--primary);
+		}
+
+		.bg-primary {
+			background-color: var(--primary);
+		}
+	</style>
+
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			const mobileMenuButton = document.getElementById('mobile-menu-button');
+			const mobileMenu = document.getElementById('mobile-menu');
+
+			mobileMenuButton.addEventListener('click', function () {
+				mobileMenu.classList.toggle('hidden');
+			});
+
+			// Close mobile menu when clicking on a link
+			const mobileLinks = mobileMenu.querySelectorAll('a');
+			mobileLinks.forEach(link => {
+				link.addEventListener('click', function () {
+					mobileMenu.classList.add('hidden');
+				});
+			});
+
+			// Close mobile menu when clicking outside
+			document.addEventListener('click', function (event) {
+				if (!mobileMenuButton.contains(event.target) && !mobileMenu.contains(event.target)) {
+					mobileMenu.classList.add('hidden');
+				}
+			});
+		});
+
+		function scrollToForm() {
+			// Add your scroll to form logic here
+			console.log('Scrolling to form...');
+		}
+	</script>
 
 	<!-- Hero Section -->
 	<!-- Carousel Container -->
@@ -392,7 +441,7 @@
 									"وَلَقَدْ يَسَّرْنَا الْقُرْآنَ لِلذِّكْرِ فَهَلْ مِن مُّدَّكِرٍ"
 								</p>
 								<p class="text-green-100 text-center mt-2 text-sm">
-									“Darhaqiqat, Qur’onni zikr uchun oson qildik. Bas, zikr qiluvchi bormi?!
+									"Darhaqiqat, Qur'onni zikr uchun oson qildik. Bas, zikr qiluvchi bormi?!
 									(Qamar surasi: 17)
 								</p>
 							</div>
@@ -661,15 +710,12 @@
 		</div>
 
 		<button id="prevBtn"
-			class="absolute left-4 top-1/2 transform -translate-y-1/2  rounded-full backdrop-blur-sm transition duration-300 z-20">
-
+			class="absolute left-4 top-1/2 transform -translate-y-1/2 rounded-full backdrop-blur-sm transition duration-300 z-20">
 		</button>
 
 		<button id="nextBtn"
-			class="absolute right-4 top-1/2 transform -translate-y-1/2  rounded-full backdrop-blur-sm transition duration-300 z-20">
-
+			class="absolute right-4 top-1/2 transform -translate-y-1/2 rounded-full backdrop-blur-sm transition duration-300 z-20">
 		</button>
-
 
 		<!-- Dots Indicator -->
 		<div class="absolute bottom-6 left-1/2 transform -translate-x-1/2 flex space-x-2 z-20">
@@ -685,6 +731,45 @@
 	</div>
 
 	<script>
+		// Mobile menu functionality
+		const mobileMenuButton = document.getElementById('mobile-menu-button');
+		const mobileMenu = document.getElementById('mobile-menu');
+		const menuOverlay = document.getElementById('menu-overlay');
+		const closeMenuButton = document.getElementById('close-menu');
+		const mobileMenuLinks = document.querySelectorAll('.mobile-menu-link');
+
+		function openMobileMenu() {
+			mobileMenu.classList.remove('-translate-x-full');
+			mobileMenu.classList.add('translate-x-0');
+			menuOverlay.classList.remove('hidden');
+			document.body.style.overflow = 'hidden';
+		}
+
+		function closeMobileMenu() {
+			mobileMenu.classList.add('-translate-x-full');
+			mobileMenu.classList.remove('translate-x-0');
+			menuOverlay.classList.add('hidden');
+			document.body.style.overflow = 'auto';
+		}
+
+		// Event listeners
+		mobileMenuButton.addEventListener('click', openMobileMenu);
+		closeMenuButton.addEventListener('click', closeMobileMenu);
+		menuOverlay.addEventListener('click', closeMobileMenu);
+
+		// Close menu when clicking on menu links
+		mobileMenuLinks.forEach(link => {
+			link.addEventListener('click', closeMobileMenu);
+		});
+
+		// Close menu on escape key
+		document.addEventListener('keydown', function (e) {
+			if (e.key === 'Escape') {
+				closeMobileMenu();
+			}
+		});
+
+		// Carousel functionality
 		let currentSlide = 0;
 		const totalSlides = 4;
 		const carousel = document.getElementById('carousel');
@@ -779,6 +864,78 @@
 
 		.animate-float {
 			animation: float 6s ease-in-out infinite;
+		}
+
+		.text-gradient {
+			background: linear-gradient(135deg, #3B82F6, #8B5CF6);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			background-clip: text;
+		}
+
+		@keyframes slideUp {
+			from {
+				opacity: 0;
+				transform: translateY(30px);
+			}
+
+			to {
+				opacity: 1;
+				transform: translateY(0);
+			}
+		}
+
+		@keyframes float {
+
+			0%,
+			100% {
+				transform: translateY(0px);
+			}
+
+			50% {
+				transform: translateY(-20px);
+			}
+		}
+
+		.animate-pulse-slow {
+			animation: pulse 3s ease-in-out infinite;
+		}
+
+		@keyframes pulse {
+
+			0%,
+			100% {
+				opacity: 1;
+			}
+
+			50% {
+				opacity: 0.7;
+			}
+		}
+
+		.bounce-in {
+			animation: bounceIn 0.8s ease-out;
+		}
+
+		@keyframes bounceIn {
+			0% {
+				opacity: 0;
+				transform: scale(0.3);
+			}
+
+			50% {
+				opacity: 1;
+				transform: scale(1.05);
+			}
+
+			70% {
+				transform: scale(0.9);
+			}
+
+			100% {
+				opacity: 1;
+				transform: scale(1);
+			}
 		}
 	</style>
 
