--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 								<button
 									onclick="document.getElementById('kurslar').scrollIntoView({behavior: 'smooth'})"
 									class="bg-accent text-dark px-8 py-4 rounded-xl font-bold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-2 transition duration-300 hover:bg-yellow-300">
-									📚 Kurslarni Ko'rish
+									Kurslarni Ko'rish
 								</button>
 
 							</div>
@@ -446,11 +446,11 @@
 								<button
 									onclick="document.getElementById('kurslar').scrollIntoView({behavior: 'smooth'})"
 									class="bg-accent text-dark px-8 py-4 rounded-xl font-bold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-2 transition duration-300 hover:bg-yellow-300">
-									📖 Qur'on Kursi
+									Qur'on Kursi
 								</button>
 								<button
 									class="border-2 border-white text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-white hover:text-primary transition duration-300">
-									🎧 Audio Darslar
+									Audio Darslar
 								</button>
 							</div>
 						</div>
@@ -460,7 +460,7 @@
 								<div class="text-center">
 									<div
 										class="bg-accent text-dark px-6 py-3 rounded-full text-lg font-bold mb-6 inline-block">
-										📖 QUR'ON VA TAJVID KURSLARI
+										QUR'ON VA TAJVID KURSLARI
 									</div>
 
 									<div class="space-y-4">
@@ -544,7 +544,7 @@
 								</button>
 								<button
 									class="border-2 border-white text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-white hover:text-primary transition duration-300">
-									📚 Grammatika
+									Grammatika
 								</button>
 							</div>
 						</div>
@@ -607,11 +607,7 @@
 				<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
 					<div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
 						<div class="slide-up">
-							<div class="mb-6">
-								<span class="bg-accent text-dark px-4 py-2 rounded-full text-sm font-semibold">
-									✂️ Hunarmandchilik va Kasb-Hunar O'rgatish
-								</span>
-							</div>
+
 							<h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold mb-6 leading-tight">
 								HUNAR VA<br>
 								<span class="text-accent">KASB O'RGANISH</span>
@@ -619,30 +615,26 @@
 
 							<div class="glass-effect rounded-2xl p-6 mb-8">
 								<p class="text-lg sm:text-xl font-arabic text-center leading-relaxed">
-									بسم الله الرحمن الرحيم<br>
-									"إِنَّ اللَّهَ يُحِبُّ إِذَا عَمِلَ أَحَدُكُمْ عَمَلًا أَن يُتْقِنَهُ"
+									<br>
+									إن الله يحب إذا عمل أحدكم عملا أن يتقنه
 								</p>
 								<p class="text-green-100 text-center mt-2 text-sm">
-									"Alloh sizlardan birortangiz biror ish qilganda, uni yaxshi qilishni yaxshi
-									ko'radi." (Hadis)
+									«Alloh birortangiz biror ishni qilganda uni puxta qilishini yaxshi ko‘radi», deb
+									marhamat qilganlar (“Al-jome’ as-sag‘ir”).
 								</p>
 							</div>
 
 							<p class="text-xl mb-8 text-green-100 leading-relaxed">
-								Qo'l hunarlarini o'rganib, mustaqil daromad topish yo'llarini egallang.
-								Tikuvchilik, oshpazlik va boshqa amaliy ko'nikmalar.
+								Zamonaviy va talabgir boʻlgan hunarlarni oʻrganib, mustaqil daromadga chiqing.
 							</p>
 
 							<div class="flex flex-col sm:flex-row gap-4">
 								<button
 									onclick="document.getElementById('kurslar').scrollIntoView({behavior: 'smooth'})"
 									class="bg-accent text-dark px-8 py-4 rounded-xl font-bold text-lg shadow-xl hover:shadow-2xl transform hover:-translate-y-2 transition duration-300 hover:bg-yellow-300">
-									✂️ Tikuvchilik
+									Hattotlik
 								</button>
-								<button
-									class="border-2 border-white text-white px-8 py-4 rounded-xl font-bold text-lg hover:bg-white hover:text-primary transition duration-300">
-									🍰 Oshpazlik
-								</button>
+
 							</div>
 						</div>
 
@@ -651,7 +643,7 @@
 								<div class="text-center">
 									<div
 										class="bg-accent text-dark px-6 py-3 rounded-full text-lg font-bold mb-6 inline-block">
-										🎨 AMALIY HUNAR KURSLARI
+										AMALIY HUNAR KURSLARI
 									</div>
 
 									<div class="space-y-4">
